--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 				</tr>
 
 				<tr class="sjtable">
-					<td id="td-sj1a" class="cat1 sjtable sjitem rift not" width="175">Create a new seasonal character</td>
-					<td id="td-sj2a" class="cat2 sjtable sjitem rift not" width="175">Choose your leveling strategy <br><b>(Tip #3)</td>
-					<td id="td-sj3a" class="cat3 sjtable sjitem rift not" width="175">Lvl 40: Craft/enchant Lv 70 2h mace for reduced level req. <br><b>(Tip #4)</b></td>
-					<td id="td-sj4a" class="cat4 sjtable sjitem rift not" width="175">Complete the Season Journey and claim your reward class set</td>
+					<td id="td-sj1a" class="cat1 sjtable sjitem rift not">Create a new seasonal character</td>
+					<td id="td-sj2a" class="cat2 sjtable sjitem rift not">Choose your leveling strategy <br><b>(Tip #3)</td>
+					<td id="td-sj3a" class="cat3 sjtable sjitem rift not">Lvl 40: Craft/enchant Lv 70 2h mace for reduced level req. <br><b>(Tip #4)</b></td>
+					<td id="td-sj4a" class="cat4 sjtable sjitem rift not">Complete the Season Journey and claim your reward class set</td>
 				</tr>
 
 				<tr class="sjtable">
