Changed veteran to casual - site description

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<table width="900" align="center">
 			<tr>
 				<td>
-					<div align="center"><font color="#faac53">This tracker was built to guide new and veteran Diablo 3 players through a quick season start.<br>Click on the boxes to check off items as you go. Refer to the Progression Tips below the tracker for more information.<br>Use this tracker together with other resources and guides available to you.</font></div>
+					<div align="center"><font color="#faac53">This tracker was built to guide new and casual Diablo 3 players through a quick season start.<br>Click on the boxes to check off items as you go. Refer to the Progression Tips below the tracker for more information.<br>Use this tracker together with other resources and guides available to you.</font></div>
 				</td>
 			</tr>
 		</table>
