reddit post (not posted yet) change

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 		
 		<p></p>
 		<div align="center"><font size="2">Created by <b>Vanlioko#1916</b></font></div>
-		<div align="center"><font size="2">Work in progress - please consider providing feedback on this <a href="www.google.com" target="_blank">reddit post</a></font></div>
+		<div align="center"><font size="2">Work in progress - please consider providing feedback on this reddit post (not posted yet)</font></div>
 		<div align="center"><font size="2">Tracker adapted from Season Journey Tracker by @bagstone1</font></div>
 		<p></p>
 
