--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 						</tr>
 						<tr>
 							<td style="border: 0; text-align:center; background-color: rgba(155,155,155,0.15);">Monk</td>
-							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Roll <u>bracers</u> at lvl 11 or 15 for <a href="https://us.diablo3.com/en/item/gungdo-gear-P2_Unique_Bracer_006" target="_blank">Gundo Gear</a> or <a href="https://us.diablo3.com/en/item/pintos-pride-P4_Unique_Bracer_105" target="_blank">Pinto's Pride</a>.</td>
+							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Roll <u>bracers</u> at lvl 1 for <a href="https://us.diablo3.com/en/item/gungdo-gear-P2_Unique_Bracer_006" target="_blank">Gundo Gear</a> or <a href="https://us.diablo3.com/en/item/pintos-pride-P4_Unique_Bracer_105" target="_blank">Pinto's Pride</a>.</td>
 							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>daibo</u> for <a href="https://us.diablo3.com/en/item/incense-torch-of-the-grand-temple-P61_Unique_CombatStaff_2H_003_x1" target="_blank">Incense Torch of the Grand Temple</a>, <a href="https://us.diablo3.com/en/item/balance-P61_Unique_CombatStaff_2H_001" target="_blank">Balance</a>, or <a href="https://us.diablo3.com/en/item/the-flow-of-eternity-P41_Unique_CombatStaff_2H_005" target="_blank">The Flow of Eternity</a></td>
 						</tr>
 						<tr>
