--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 					<p></p>
 					<div>The amount of <font color="#6ad4b7">Death's Breaths</font> you were rewarded allow you to upgrade only one lvl 70 rare weapon to a legendary and extract its legendary power so that it can be available to your character throughout leveling.</div> 
 					<p></p>
-					<div>Like rolling blood shards, this is also purely based on luck. With most classes, you have a very low chance of upgrading to a legendary item with a multiplier that would help you through your leveling journey. For this reason, this method is only recommended for <u>Necromancers</u> and <u>Demon Hunters</u>, unless you want to take the chance at it with another class.</div>
+					<div>Like rolling blood shards, this is also purely based on luck. With most classes, you have a very low chance of upgrading to a legendary item with a multiplier that would help you through your leveling journey. For this reason, this method is most viable for <u>Necromancers</u> and <u>Demon Hunters</u>, unless you want to take the chance at it with another class.</div>
 					<p></p>
 					<div>In order to upgrade the weapon and extract its power, you will need to acquire <a href="https://us.diablo3.com/en/game/guide/items/kanais-cube" target="_blank">Kanai's Cube</a> from Ruins of Sescheron in Act III. You will also need to have your Blacksmith fully leveled in order to craft a lvl 70 rare weapon. I have included some recommendations for what kind of weapon to upgrade for each class below.</div>
 					<p></p>
