Added chance to upgrade info

--- a/index.html
+++ b/index.html
@@ -168,40 +168,40 @@
 												<tr>
 							<td style="border: 0; text-align:center; background-color: rgba(155,155,155,0.15);">Barbarian</td>
 							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Roll <u>braces</u> at lvl 1 for <a href="https://us.diablo3.com/en/item/bracers-of-destruction-P67_Unique_Bracer_100" target="_blank">Bracers of Destruction</a> or <a href="https://us.diablo3.com/en/item/bracers-of-the-first-men-P61_Unique_Bracer_105" target="_blank">Bracers of the First Men</a> and/or <u>rings</u> for <a href="https://us.diablo3.com/en/item/band-of-might-P61_Unique_Ring_05" target="_blank">Band of Might</a></td>
-							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>two-handed mighty weapon</u> for <a href="https://us.diablo3.com/en/item/bastions-revered-Unique_Mighty_2H_004_p1" target="_blank">Bastion's Revered</a>, <a href="https://us.diablo3.com/en/item/fury-of-the-vanished-peak-P61_Unique_Mighty_2H_006" target="_blank">Fury of the Vanished Peak</a>, or <a href="https://us.diablo3.com/en/item/the-gavel-of-judgment-P61_Unique_Mighty_2H_001" target="_blank">The Gavel of Judgment</a></td>
+							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>two-handed mighty weapon</u> for <a href="https://us.diablo3.com/en/item/bastions-revered-Unique_Mighty_2H_004_p1" target="_blank">Bastion's Revered</a>, <a href="https://us.diablo3.com/en/item/fury-of-the-vanished-peak-P61_Unique_Mighty_2H_006" target="_blank">Fury of the Vanished Peak</a>, or <a href="https://us.diablo3.com/en/item/the-gavel-of-judgment-P61_Unique_Mighty_2H_001" target="_blank">The Gavel of Judgment</a> <font color="#b81111">(3/6 - 50%)</font></td>
 						</tr>
 						<tr>
 							<td style="border: 0; text-align:center; background-color: rgba(155,155,155,0.15);">Crusader</td>
 							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Roll <u>bracers</u> at lvl 1 for <a href="https://us.diablo3.com/en/item/gabriels-vambraces-P3_Unique_Bracer_101" target="_blank">Gabriel's Vambraces</a> or <u>shields</u> at lvl 34 for <a href="https://us.diablo3.com/en/item/jekangbord-P65_Unique_CruShield_102_x1" target="_blank">Jekangbord</a></td>
-							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>one-handed flail</u> for <a href="https://us.diablo3.com/en/item/darklight-P67_Unique_Flail_1H_106" target="_blank">Darklight</a>, <a href="https://us.diablo3.com/en/item/gyrfalcons-foote-P61_Unique_Flail_1H_105_x1" target="_blank">Gyrfalcon's Foote</a>, or <a href="https://us.diablo3.com/en/item/johannas-argument-P1_flail1H_norm_unique_01" target="_blank">Johanna's Argument</a></td>
+							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>one-handed flail</u> for <a href="https://us.diablo3.com/en/item/darklight-P67_Unique_Flail_1H_106" target="_blank">Darklight</a>, <a href="https://us.diablo3.com/en/item/gyrfalcons-foote-P61_Unique_Flail_1H_105_x1" target="_blank">Gyrfalcon's Foote</a>, or <a href="https://us.diablo3.com/en/item/johannas-argument-P1_flail1H_norm_unique_01" target="_blank">Johanna's Argument</a> <font color="#b81111">(3/7 - 42%)</font></td>
 						</tr>
 						<tr>
 							<td style="border: 0; text-align:center; background-color: rgba(155,155,155,0.15);">Demon<br>Hunter</td>
 							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Roll <u>belts</u> at lvl 1 for <a href="https://us.diablo3.com/en/item/hellcat-waistguard-P43_Unique_Belt_005_x1" target="_blank">Hellcat Waisguard</a></td>
-							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>dagger</u> for <a href="https://us.diablo3.com/en/item/lord-greenstones-fan-P61_Unique_Dagger_102_x1" target="_blank">Lord Greenstone's Fan</a> or <a href="https://us.diablo3.com/en/item/karleis-point-P61_Unique_Dagger_101_x1" target="_blank">Karlei's Point</a></font></td>
+							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>dagger</u> for <a href="https://us.diablo3.com/en/item/lord-greenstones-fan-P61_Unique_Dagger_102_x1" target="_blank">Lord Greenstone's Fan</a> or <a href="https://us.diablo3.com/en/item/karleis-point-P61_Unique_Dagger_101_x1" target="_blank">Karlei's Point</a> <font color="#b81111">(2/2 - 100%)</font></td>
 						</tr>
 						<tr>
 							<td style="border: 0; text-align:center; background-color: rgba(155,155,155,0.15);">Monk</td>
 							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Roll <u>bracers</u> at lvl 1 for <a href="https://us.diablo3.com/en/item/gungdo-gear-P2_Unique_Bracer_006" target="_blank">Gundo Gear</a> or <a href="https://us.diablo3.com/en/item/pintos-pride-P4_Unique_Bracer_105" target="_blank">Pinto's Pride</a>.</td>
-							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>daibo</u> for <a href="https://us.diablo3.com/en/item/incense-torch-of-the-grand-temple-P61_Unique_CombatStaff_2H_003_x1" target="_blank">Incense Torch of the Grand Temple</a>, <a href="https://us.diablo3.com/en/item/balance-P61_Unique_CombatStaff_2H_001" target="_blank">Balance</a>, or <a href="https://us.diablo3.com/en/item/the-flow-of-eternity-P41_Unique_CombatStaff_2H_005" target="_blank">The Flow of Eternity</a></td>
+							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>daibo</u> for <a href="https://us.diablo3.com/en/item/incense-torch-of-the-grand-temple-P61_Unique_CombatStaff_2H_003_x1" target="_blank">Incense Torch of the Grand Temple</a>, <a href="https://us.diablo3.com/en/item/balance-P61_Unique_CombatStaff_2H_001" target="_blank">Balance</a>, or <a href="https://us.diablo3.com/en/item/the-flow-of-eternity-P41_Unique_CombatStaff_2H_005" target="_blank">The Flow of Eternity</a> <font color="#b81111">(3/8 - 38%)</font></td>
 						</tr>
 						<tr>
 							<td style="border: 0; text-align:center; background-color: rgba(155,155,155,0.15);">Necromancer</td>
 							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Roll <u>rings</u> at lvl 1 for <a href="https://us.diablo3.com/en/item/circle-of-nailujs-evol-P6_Unique_Ring_01" target="_blank">Circle of Nailuj's Evol</a>. Roll <u>gloves</u> at lvl 1 for <a href="https://us.diablo3.com/en/item/grasps-of-essence-P6_Necro_Unique_Gloves_22" target="_blank">Grasps of Essence</a> with leftover shards.</td>
-							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>two-handed scythe</u> for <a href="https://us.diablo3.com/en/item/bloodtide-blade-P65_Unique_Scythe2H_02" target="_blank">Bloodtide Blade</a>, <a href="https://us.diablo3.com/en/item/maltorius-petrified-spike-P61_Unique_Scythe2H_01" target="_blank">Maltorius' Petrified Spike</a>, <a href="https://us.diablo3.com/en/item/nayrs-black-death-P61_Unique_Scythe2H_04" target="_blank">Nayr's Black Death</a>, or <a href="https://us.diablo3.com/en/item/reilenas-shadowhook-P6_Unique_Scythe2H_03" target="_blank">Reilena's Shadowhook</a></td>
+							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>two-handed scythe</u> for <a href="https://us.diablo3.com/en/item/bloodtide-blade-P65_Unique_Scythe2H_02" target="_blank">Bloodtide Blade</a>, <a href="https://us.diablo3.com/en/item/maltorius-petrified-spike-P61_Unique_Scythe2H_01" target="_blank">Maltorius' Petrified Spike</a>, <a href="https://us.diablo3.com/en/item/nayrs-black-death-P61_Unique_Scythe2H_04" target="_blank">Nayr's Black Death</a>, or <a href="https://us.diablo3.com/en/item/reilenas-shadowhook-P6_Unique_Scythe2H_03" target="_blank">Reilena's Shadowhook</a> <font color="#b81111">(4/4 - 100%)</font></td>
 						</tr>
 						<tr>
 							<td style="border: 0; text-align:center; background-color: rgba(155,155,155,0.15);">Witch<br>Doctor</td>
 							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Roll <u>mojos</u> at lvl 1 for <a href="" target="_blank">Gazing Demise</a>.</td>
-							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>ceremonial knife</u> for <a href="https://us.diablo3.com/en/item/the-dagger-of-darts-P65_CeremonialDagger_norm_unique_02" target="_blank">Dagger of Darts</a>, <a href="https://us.diablo3.com/en/item/the-barber-P5_Unique_Dagger_003_x1" target="_blank">The Barber</a>, or <a href="https://us.diablo3.com/en/item/the-gidbinn-Unique_CeremonialDagger_002_x1" target="_blank">The Gidbinn</a></a></td>
+							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>ceremonial knife</u> for <a href="https://us.diablo3.com/en/item/the-dagger-of-darts-P65_CeremonialDagger_norm_unique_02" target="_blank">Dagger of Darts</a>, <a href="https://us.diablo3.com/en/item/the-barber-P5_Unique_Dagger_003_x1" target="_blank">The Barber</a>, or <a href="https://us.diablo3.com/en/item/the-gidbinn-Unique_CeremonialDagger_002_x1" target="_blank">The Gidbinn</a> <font color="#b81111">(3/12 - 25%)</font></td>
 						</tr>
 						<tr>
 							<td style="border: 0; text-align:center; background-color: rgba(155,155,155,0.15);">Wizard</td>
 							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Roll <u>sources</u> at lvl 33 for <a href="https://us.diablo3.com/en/item/etched-sigil-P61_Unique_Orb_002" target="_blank">Etched Sigil</a></td>
-							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>wand</u> for <a href="https://us.diablo3.com/en/item/unstable-scepter-P61_Wand_norm_unique_02" target="_blank">Unstable Scepter</a>, <a href="https://us.diablo3.com/en/item/serpents-sparker-Unique_Wand_102_x1" target="_blank">Serpent's Sparker</a>, <a href="https://us.diablo3.com/en/item/wand-of-woh-P61_Unique_Wand_101_x1" target="_blank">Wand of Woh</a>, or <a href="https://us.diablo3.com/en/item/aether-walker-P1_Wand_norm_unique_01" target="_blank">Aether Walker</a></td>
+							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>wand</u> for <a href="https://us.diablo3.com/en/item/unstable-scepter-P61_Wand_norm_unique_02" target="_blank">Unstable Scepter</a>, <a href="https://us.diablo3.com/en/item/serpents-sparker-Unique_Wand_102_x1" target="_blank">Serpent's Sparker</a>, or <a href="https://us.diablo3.com/en/item/wand-of-woh-P61_Unique_Wand_101_x1" target="_blank">Wand of Woh</a> <font color="#b81111">(3/10 - 30%)</font></td>
 						</tr>
 					</table>
-					<div align="center"><font size="2">Roll/Upgrade Table</font></div>
+					<div align="center"><font size="2">Roll/Upgrade Table - The chance to upgrade to one of the items listed is shown as <font color="#b81111">(# of listed items/# of total options - X%)</font></font></div>
 					<p></p>
 					<div><u>Note</u>: Other than rolling blood shards for class-specific items, rolling for <u>pants/helms</u> at lvl 1 for <a href="https://us.diablo3.com/en/item/pox-faulds-Unique_Pants_007_p2" target="_blank">Pox Faulds</a> and <a href="https://us.diablo3.com/en/item/leorics-crown-Unique_Helm_002_p1" target="_blank">Leoric's Crown</a> are good options for any class.</div>
 				</td>
@@ -404,6 +404,8 @@
 		<table align="center" width="900" style="border-spacing: 10px; background-color: rgba(155,155,155,0.07);" cellpadding="5px">
 			<tr>
 				<td valign="top" align="justify">
+					<div><font size="2"><font color="#faac53">Mar 5, 2020</font> - Added chance to upgrade to items listed to Roll/Upgrade Table</font></div>
+					<p></p>
 					<div><font size="2"><font color="#faac53">Mar 2, 2020</font> - Updated content based on feedback from <a href="https://www.twitch.tv/svr_90" target="_blank">sVr</a></font></div>
 					<ul style="list-style-type:square;">
 						<li><font size="2">Added changelog and discord tag for feedback</font></li>
@@ -419,7 +421,6 @@
 					</ul>
 					<div><font size="2" color="#faac53">Known Issues</font></div>
 					<ul style="list-style-type:square;">
-						<li><font size="2">Add upgrade % chance on Roll/Upgrade Table in Tip #2</font></li>
 						<li><font size="2">Steps to equip passives in tracker are filler</font></li>
 					</ul>
 				</td>
