--- a/index.html
+++ b/index.html
@@ -395,10 +395,10 @@
 		<br><br>
 		
 		<p></p>
-		<div align="center"><font size="2">Created by <b>Vanlioko#1916</b></font></div>
+		<div align="center"><font size="2">Created and maintained by <b>Vanlioko#1916</b></font></div>
 		<div align="center"><font size="2">Work in progress - please consider providing feedback on discord (Vanlioko#9520)</font></div>
 		<div align="center"><font size="2">Tracker coding adapted from Season Journey Tracker by @bagstone1</font></div>
-		<button class="accordion"><font color="#D8D8D8">Last modified Mar 2, 2020: </font>[changelog]</button>
+		<button class="accordion"><font color="#D8D8D8">Last modified Mar 5, 2020: </font>[changelog]</button>
 		<div class="panel">
 		
 		<table align="center" width="900" style="border-spacing: 10px; background-color: rgba(155,155,155,0.07);" cellpadding="5px">
