--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 
 <html lang="en">
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159905035-1"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-159905035-1');
+		</script>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>D3 Season 20 Quick Start Tracker</title>
 		<script src="./resources/jquery-3.0.0.min.js.download"></script>
