--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-
 <html lang="en">
-	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159905035-1"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
+<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159905035-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-		gtag('config', 'UA-159905035-1');
-		</script>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>D3 Season 20 Quick Start Tracker</title>
-		<script src="./resources/jquery-3.0.0.min.js.download"></script>
-		<script src="./resources/jquery-ui.min.js.download"></script>
-		<script src="./resources/functions.js.download"></script>
-		<link rel="stylesheet" type="text/css" href="./resources/main-style.css">
-		<link rel="stylesheet" type="text/css" href="./resources/d3rheader.css">
-		<link rel="stylesheet" type="text/css" href="./resources/jquery-ui.min.css">
-	</head>
+  gtag('config', 'UA-159905035-1');
+</script>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="DiabloSeasons is a Diablo 3 resource website to containing trackers and guides for new, casual, and veteran players to achieve a quick season start in D3.">
+<title>D3 Quick Season 20 Start Tracker - DiabloSeasons</title>
+<script src="./resources/jquery-3.0.0.min.js.download"></script>
+<script src="./resources/jquery-ui.min.js.download"></script>
+<script src="./resources/functions.js.download"></script>
+<link rel="stylesheet" type="text/css" href="./resources/main-style.css">
+<link rel="stylesheet" type="text/css" href="./resources/d3rheader.css">
+<link rel="stylesheet" type="text/css" href="./resources/jquery-ui.min.css">
+</head>
 
 	<body>
 
