--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   gtag('config', 'UA-159905035-1');
 </script>
+<script data-ad-client="ca-pub-7985085162718459" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="description" content="DiabloSeasons is a Diablo 3 resource website to containing trackers and guides for new, casual, and veteran players to achieve a quick season start in D3.">
 <title>D3 Quick Season 20 Start Tracker - DiabloSeasons</title>
@@ -404,7 +405,7 @@
 		<br><br>
 		
 		<p></p>
-		<div align="center"><font size="2">Created and maintained by <b>Vanlioko#1916</b></font></div>
+		<div align="center"><font size="3">Created and maintained by <b>Vanlioko#1916</b></font></div>
 		<div align="center"><font size="2">Work in progress - please consider providing feedback on discord (Vanlioko#9520)</font></div>
 		<div align="center"><font size="2">Tracker coding adapted from Season Journey Tracker by @bagstone1</font></div>
 		<button class="accordion"><font color="#D8D8D8">Last modified Mar 5, 2020: </font>[changelog]</button>
@@ -435,10 +436,25 @@
 				</td>
 			</tr>
 		</table>
-		
+				
 		</div>
 		
 		<br><br>
+		<br></br>
+		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Horizontal -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7985085162718459"
+     data-ad-slot="7181954785"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+		<br></br>
 
 		<script>
 		// create link with all progress
