--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 					<p></p>
 					<div>The amount of <font color="#6ad4b7">Death's Breaths</font> you were rewarded allow you to upgrade only one lvl 70 rare weapon to a legendary and extract its legendary power so that it can be available to your character throughout leveling.</div> 
 					<p></p>
-					<div>Like rolling blood shards, this is also purely based on luck. With most classes, you have a very low chance of upgrading to a legendary item with a multiplier that would help you through your leveling journey. For this reason, this method is most viable for <u>Necromancers</u> and <u>Demon Hunters</u>, unless you want to take the chance at it with another class.</div>
+					<div>Like rolling blood shards, this is also purely based on luck. With most classes, you have a very low chance of upgrading to a legendary item with a multiplier that would help you through your leveling journey. For this reason, this method is most viable for <u>Necromancers</u> and <u>Demon Hunters</u>, unless you want to take the chance at it with another class. If you decide to hold out on ugprading a weapon, you will have Death's Breaths available to cube the legendary powers of legendaries you get throughout leveling. This can help you level a great deal, especially with the Season 20 theme.</div>
 					<p></p>
 					<div>In order to upgrade the weapon and extract its power, you will need to acquire <a href="https://us.diablo3.com/en/game/guide/items/kanais-cube" target="_blank">Kanai's Cube</a> from Ruins of Sescheron in Act III. You will also need to have your Blacksmith fully leveled in order to craft a lvl 70 rare weapon. I have included some recommendations for what kind of weapon to upgrade for each class below.</div>
 					<p></p>
@@ -187,7 +187,8 @@
 						</tr>
 						<tr>
 							<td style="border: 0; text-align:center; background-color: rgba(155,155,155,0.15);">Demon<br>Hunter</td>
-							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Roll <u>belts</u> at lvl 1 for <a href="https://us.diablo3.com/en/item/hellcat-waistguard-P43_Unique_Belt_005_x1" target="_blank">Hellcat Waisguard</a></td>
+							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Roll <u>bracers</u> at lvl 1 for <a href="https://us.diablo3.com/en/item/wraps-of-clarity-P61_Unique_Bracer_103">Wraps of Clarity</a> or <u>belts</u> for 
+							<a href="https://us.diablo3.com/en/item/hellcat-waistguard-P43_Unique_Belt_005_x1" target="_blank">Hellcat Waistguard</a></td>
 							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>dagger</u> for <a href="https://us.diablo3.com/en/item/lord-greenstones-fan-P61_Unique_Dagger_102_x1" target="_blank">Lord Greenstone's Fan</a> or <a href="https://us.diablo3.com/en/item/karleis-point-P61_Unique_Dagger_101_x1" target="_blank">Karlei's Point</a> <font color="#b81111">(2/2 - 100%)</font></td>
 						</tr>
 						<tr>
@@ -406,7 +407,7 @@
 		
 		<p></p>
 		<div align="center"><font size="3">Created and maintained by <b>Vanlioko#1916</b></font></div>
-		<div align="center"><font size="2">Work in progress - please consider providing feedback on discord (Vanlioko#9520)</font></div>
+		<div align="center"><font size="2">Work in progress - please consider providing feedback on this <a href="https://www.reddit.com/r/Diablo/comments/feo620/d3_quick_season_start_tracker_diabloseasons/" target="_blank">reddit post</a></font></div>
 		<div align="center"><font size="2">Tracker coding adapted from Season Journey Tracker by @bagstone1</font></div>
 		<button class="accordion"><font color="#D8D8D8">Last modified Mar 5, 2020: </font>[changelog]</button>
 		<div class="panel">
