Added description Stomping Grounds

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 				<td align="justify" valign="top" colspan="2">
 					<div><font color="#faac53"><b>Kanai's Stomping Grounds (Season  20 Only)</b></font></div>
 					<p></p>
-					<div>During season 20, a March-only event spawns in Act III - Ruins of Sescheron. To access it, players must follow the same path they would take to reach Kanai's Cube and get to the Elder Sanctum map. Once you have reached the cube, turn left and go straight through to Kanai's Throne Room. He will wake up and open a portal to his stomping grounds. This temporary level has good monster density for massacre bonuses and grants a gold and experience reward upon completion.</div>	
+					<div>During season 20, a March-only event spawns in Act III - Ruins of Sescheron. To access it, players must follow the same path they would take to reach Kanai's Cube and get to the Elder Sanctum map. Once you have reached the cube, turn left and go straight through to Kanai's Throne Room. He will wake up and open up a portal to his stomping grounds where he will fight with you and effectively one-shot monsters. If done in Torment 6 difficulty, this can allow for speedy leveling. This temporary level has good monster density for massacre bonuses and grants a gold and experience reward upon completion. If elites are too tanky, just skip them, kill density, and repeat the event as many times as needed. Make sure your weapons are upgraded every other run, since King Kanai's damage depends on your damage.</div>	
 				</td>
 			</tr>
 		</table>
