added diablofans post

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<table width="900" align="center">
 			<tr>
 				<td>
-					<div align="center"><font color="#faac53">This tracker was built to guide new and casual Diablo 3 players through a quick season start.<br>Click on the boxes to check off items as you go. Refer to the Progression Tips below the tracker for more information.<br>Use this tracker together with other resources and guides available to you.</font></div>
+					<div align="center"><font color="#faac53">This tracker was built to guide new and casual Diablo 3 players through a quick season start. Click on the boxes to check off items as you go. Refer to the Progression Tips below the tracker for more information. Use this tracker together with other resources and guides available to you.</div>
 				</td>
 			</tr>
 		</table>
@@ -412,7 +412,7 @@
 		
 		<p></p>
 		<div align="center"><font size="3">Created and maintained by <b>Vanlioko#1916</b></font></div>
-		<div align="center"><font size="2">Work in progress - please consider providing feedback on this <a href="https://www.reddit.com/r/Diablo/comments/feo620/d3_quick_season_start_tracker_diabloseasons/" target="_blank">reddit post</a></font></div>
+		<div align="center"><font size="2">Work in progress - please consider providing feedback on these <a href="https://www.reddit.com/r/Diablo/comments/feo620/d3_quick_season_start_tracker_diabloseasons/" target="_blank">reddit</a> or <a href="https://www.diablofans.com/forums/diablo-forums/diablo-iii-general-discussion/240914-d3-quick-season-start-tracker-diabloseasons" target="_blank">diablofans</a> posts</font></div>
 		<div align="center"><font size="2">Tracker coding adapted from Season Journey Tracker by @bagstone1</font></div>
 		<button class="accordion"><font color="#D8D8D8">Last modified Mar 5, 2020: </font>[changelog]</button>
 		<div class="panel">
