Removed unneded .css, pictures, and added cleavers pic

--- a/index.html
+++ b/index.html
@@ -324,6 +324,9 @@
 					<p></p>
 					<div>This method allows you to get an experience boost at the beginning of the season by using map mechanics to your advantage. In order to try this, turn the difficulty to Torment VI and go to Halls of Agony Level 1 in Act I. Go through the map until you find a corridor with big butcher-like cleavers swinging up and down. Attacking and dragging monsters to them will kill them and grant you a considerable amount of experience.</div>
 					<p></p>
+					<div align="center"><img src="resources/cleaversm.png" title="Cleavers in Halls of Agony Level 1 - Act III"></div>
+					<div align="center"><font size="2">Cleavers in Halls of Agony Level 1 - Act III</font></div>
+					<p></p>
 					<div>If you are working with a coordinated group, you can also consider trying to get a game with a Halls of Agony Level 1 bounty to kill a boss. Succesfully killing this boss with the cleavers will grant you considerably more experience per run. To find bounties more efficiently, have everyone in your group start a game separately and everyone to join whoever gets it.</div>
 				</td>
 			</tr>
