--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				</tr>
 
 				<tr class="sjtable">
-					<td id="td-sj1f" class="cat1 sjtable sjitem rift not">Switch to Hard difficulty<br>Level Blacksmith and Mystic</td>
+					<td id="td-sj1f" class="cat1 sjtable sjitem rift not">Fully level the Blacksmith<br>and Mystic NPCs</td>
 					<td id="td-sj2f" class="cat2 sjtable sjitem rift not">Lvl 21/23: Craft and equip the Cain/Born sets for +70% exp</td>
 					<td class="sjtable empty">&nbsp;</td>
 					<td class="sjtable empty">&nbsp;</td>
@@ -203,7 +203,7 @@
 						</tr>
 						<tr>
 							<td style="border: 0; text-align:center; background-color: rgba(155,155,155,0.15);">Witch<br>Doctor</td>
-							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Roll <u>mojos</u> at lvl 1 for <a href="" target="_blank">Gazing Demise</a>.</td>
+							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Roll <u>mojos</u> at lvl 1 for <a href="https://us.diablo3.com/en/item/gazing-demise-P68_Unique_Mojo_003" target="_blank">Gazing Demise</a>.</td>
 							<td style="border: 0; text-align:left; background-color: rgba(155,155,155,0.15);">Upgrade a <u>ceremonial knife</u> for <a href="https://us.diablo3.com/en/item/the-dagger-of-darts-P65_CeremonialDagger_norm_unique_02" target="_blank">Dagger of Darts</a>, <a href="https://us.diablo3.com/en/item/the-barber-P5_Unique_Dagger_003_x1" target="_blank">The Barber</a>, or <a href="https://us.diablo3.com/en/item/the-gidbinn-Unique_CeremonialDagger_002_x1" target="_blank">The Gidbinn</a> <font color="#b81111">(3/12 - 25%)</font></td>
 						</tr>
 						<tr>
